# AMECA_NEXT

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  dist-workspace.toml  docker-compose.yml  docker-compose_no_pg.yml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.sqlx/: query-078aeaabc2085beb9f33736aeae6959ca10ff5f6c8f02579322c72fa57774327.json  query-0cf139a076d637075409610e588745c0466ef595573dfc956fc802fad8ed583a.json  query-14ecbb98de1d87440908780f508097e633f72f9e44e750450285ab881e865b38.json  query-15663ccd7d3be7ec5d5bd7fede068206388bd334bf4ae2877d00738f9b45ae92.json  query-19df5b88c60ac8c41c579fcc06f1f583a14376d7493a85f2d747d02e182b68cd.json  query-3b6cd5db8476a359fbcd8dc2794d53263cadf6832603f271036f3a231d1b8f54.json  query-5071b47371bc110b42e150ee6e8f0d87a270dd6b66550b55ebf26f264bbd2105.json  query-5108b3bec78f94b956ab590e929bb8580569d4e9f979e2447ea5588c61e722ad.json  query-5517da9e08b3b65d1b7348177e06a8a3e1544986aa7e9486f1864ccd5245f36c.json  query-69f3f3b22f883c43809c174a901542261939647053f2d2407a2420b3118711bc.json  query-7500c8af0d010c8fe6e385ea09e043d1809de46320bbc3e7fe42f5f44f12e992.json  query-7dd481d22519a55cb0bc1625aff05ce2f56a99ff8ea774a401a3e97969bf4ec8.json  query-9b20bc7689c8df492340cb0bd9cc7b70795bb5a55bf520c02d14f311b293c035.json  query-a4f6840c5c0e9c220d13b26f3712ea6e5b8b40b71c66a2a3e0adc79ffc4ae1ad.json  query-a61446ee7d050177f40350acc92bae6e44b9e0042ed3a49bd546d4823c44d909.json  query-af75e5c83249a4b267af177f4cd36c3ad6ff82a254059422897647e14e82c7cd.json  query-b34671205c9ce723cbe6d85be4b043cc39ca59189c193a82168b1b5bbb53c1f9.json  query-c5a2d591c7c2511d1d689ac2e7ff633dd5ff0a91fb6999bd4c4253462bf8cc4e.json  query-ca9e3d054fbe2e580697f09b255d56f7183338edc1809d0c049ec6eebaf54daf.json  query-ead6883e76e00d300f800f31c58c80ad97522ddcca925e2df881b2f80647a073.json  query-f29d5babfa1c6f0183689978fcc4b4d8a945fd257e65d062d1eebc63a9c8aa85.json
ameca_pg/: .gitignore  Cargo.toml
ameca_pg/migrations/: 0002_automod.up.sql  0_init.down.sql  0_init.up.sql
ameca_pg/src/: bot.rs  main.rs  models.rs
ameca_pg/src/db/: database.rs
ameca_pg/src/models/: channel.rs  guilds.rs  member.rs  messasges.rs
migrations/: 0002_automod.down.sql  0003_automod_exempt_channel.down.sql  0003_automod_exempt_channel.up.sql  0004_rename_relationship_tables.down.sql  0004_rename_relationship_tables.up.sql  0005_admin_guild_member_relation.down.sql  0005_admin_guild_member_relation.up.sql  0006_add_guild_name_to_table.down.sql  0006_add_guild_name_to_table.up.sql  0007_remove_banned_relation.down.sql  0007_remove_banned_relation.up.sql  0008_remove_deleted_msg_relation.down.sql  0008_remove_deleted_msg_relation.up.sql  0009_guild_to_prohibited_word.down.sql  (+21 more)
(+30 files in other folders)
