[package]
name = "ameca_pg"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing-appender = "0.2.3"
dotenv = "0.15.0"
sqlx = {version = "0.8.2",features = ["chrono","postgres","runtime-tokio"]}
poise = "0.6.1"
lexopt = "0.3.0"
console-subscriber = "0.4.0"
log = "0.4.22"
static_assertions = "1.1.0"
regex = "1.11.0"
dashmap = "6.1.0"

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }
