[package]
name = "ameca_pg"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing-appender = "0.2.3"
dotenv = "0.15.0"
sqlx = {version = "0.8.2",features = ["chrono","postgres","runtime-tokio"]}
poise = { version = "0.6.1", features = ["cache"] }
lexopt = "0.3.0"
static_assertions = "1.1.0"
regex = "1.11.0"
dashmap = "6.1.0"
miniserde = "0.1.40"
sha2 = "0.10.8"

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }
[profile.dev]
incremental = true


[profile.release]
opt-level = 3
strip = true
debug-assertions = false
lto = "thin"
panic = "unwind"
incremental = true
overflow-checks = false

[build]
rustflags=["-Ctarget-feature=+avx2"]

